# ibl-ephys-alignment-gui

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/ephys_alignment_gui/: README.md  __init__.py  channel_locations.json  custom_atlas.py  ephys_alignment.py  ephys_features.py  ephys_gui_setup.py  features_across_region.py  get_scale_factor.py  histology.py  launch_gui.py  load_data_local.py  load_histology.py  plot_data.py  plot_elements.py  prev_alignments.json  probe_geometry.py  qrangeslider.py  subject_scaling.py  utils.py
src/ephys_alignment_gui/qc/: base.py  critical_reasons.py  spec.py
src/ephys_alignment_gui/windows/: features_across_region.py  subject_scaling.py
